# lucy_ros_packages

camera_ros/: CMakeLists.txt  package.xml
camera_ros/scripts/: publish_jpg.py
camera_ros/src/: publish_jpg.py
